Fix video alignment issue in the editor.

--- a/src/scss/admin/_block-editor.scss
+++ b/src/scss/admin/_block-editor.scss
@@ -26,6 +26,12 @@
   }
 }
 
+// Override video margin-left/right: 0;
+.wp-block-video.wp-block {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 // Embedded blocks styling
 .wp-block-embed {
   min-width: 100%;
